<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.InternalStaffListingFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_VIntStaffPersonalDtlId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="@dimen/smaller_text_size"
            android:text="@string/text_VisitorsDetailsTitle"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_VisitorsExportToExcel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/larger_text_size"
            android:layout_marginRight="@dimen/larger_text_size"
            android:background="@drawable/button_curve"
            android:gravity="center_horizontal"
            android:padding="@dimen/medium_text_size"
            android:text="@string/text_VisitorsExportToExcel"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium"
            android:backgroundTint="@color/light_green"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_VIntStaffPersonalDtlId" />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/larger_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scrollbars="horizontal|vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_VisitorsExportToExcel">
            <TableLayout
                android:id="@+id/display_Staff_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"
                android:divider="@drawable/table_divider"
                android:showDividers="beginning|middle|end"
                android:stretchColumns="*"
                android:layout_marginTop="5dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@drawable/table_divider"
                    android:showDividers="middle"
                    android:background="@color/light_deep">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_VIntStaffPersonalDtlId"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_InternalStaff"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:padding="@dimen/padding_small"
                        android:gravity="center"
                        android:text="@string/text_IntFirstName"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntLastName"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntParentOtherName"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntMobile"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntEmailId"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntHomeAddress"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntCity"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntState"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_Pincode"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntAadharCard"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntPAN"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntBankAccount"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntIFSC"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntBranch"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntBankAddress"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntStatus"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small"
                        android:text="@string/text_IntEdit"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>