<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.DefaultInternalStaffFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:paddingBottom="@dimen/larger_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_Select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow1"
            android:text="@string/text_Select"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_visitorTypeUser"
            app:layout_constraintDimensionRatio="w,1:0"
            app:layout_constraintEnd_toEndOf="@+id/spinner_searchToVisit"
            app:layout_constraintTop_toTopOf="@+id/spinner_visitorTypeUser" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/common_button"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/submit"

            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edt_VisitorPurpose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smaller_text_size"
            android:layout_marginRight="8dp"
            android:background="@drawable/general_edt_box"
            android:ems="10"
            android:hint="@string/text_VisitorPurpose1"
            android:inputType="textLongMessage"
            android:padding="@dimen/font_medium"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_VisitorPurpose" />

        <Spinner
            android:id="@+id/spinner_visitorTypeUser"
            style="@style/spinner_style"
            android:layout_marginTop="@dimen/medium_text_size"
            android:padding="@dimen/medium_text_size"
            app:layout_constraintEnd_toStartOf="@+id/button_Select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textVistorTypeTitle" />

        <Spinner
            android:id="@+id/spinner_searchToVisit"
            style="@style/spinner_style"
            android:layout_marginTop="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_staffName" />

        <Spinner
            android:id="@+id/spinner_staffName"
            style="@style/spinner_style"
            android:layout_marginTop="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_staffName1" />

        <TextView
            android:id="@+id/textVistorTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_visitortype"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_staffName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_SearchVisit"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_visitorTypeUser" />

        <TextView
            android:id="@+id/text_staffName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_staffName"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_searchToVisit" />

        <TextView
            android:id="@+id/text_VisitorPurpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_VisitorPurpose"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_staffName" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>